Add details views.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,7 +26,7 @@
     <div class="Header__wrapper">
       <nav>
         <ul>
-          <li ui-sref-active="active"><a ui-sref="guh.dashboard">Dashboard</a></li>
+          <!-- <li ui-sref-active="active"><a ui-sref="guh.dashboard">Dashboard</a></li> -->
           <li ui-sref-active="active"><a ui-sref="guh.things">Things</a></li>
           <li ui-sref-active="active"><a ui-sref="guh.rules">Rules</a></li>
           <li ui-sref-active="active"><a ui-sref="guh.settings">Settings</a></li>
