--- a/src/app/shared/ui/form/form-field-templates/form-field-checkbox.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-checkbox.html
@@ -24,7 +24,7 @@
 <div ng-form="subForm" class="checkbox">
   <label ng-class="{ 'active': formField.value }" ng-click="formField.value = !formField.value; formField.setValue()">
     {{ formField.label }}
-    <svg class="icon">
+    <svg class="FormField__icon">
       <use xlink:href="./assets/svg/ui/ui.symbol.svg#checkmark"></use>
     </svg>
   </label>
