--- a/src/app/shared/ui/form/form.html
+++ b/src/app/shared/ui/form/form.html
@@ -21,6 +21,6 @@
 -->
 
 
-<form name="{{ form.name }}" ng-submit="form.submit()" novalidate>  
+<form class="Form" name="{{ form.name }}" ng-submit="form.submit()" novalidate>  
   <ng-transclude></ng-transclude>
 </form>
