--- a/src/app/components/modal-container/modal-container.scss
+++ b/src/app/components/modal-container/modal-container.scss
@@ -73,6 +73,7 @@ $turquoise: #57baae;
   }
 
   p {
+    @include rem(margin-bottom, 1.5);
     @include rem(margin-top, 1.5);
     @include rem(padding, 0, 1.5);
   }
