--- a/src/app/containers/rule-details/rule-details.html
+++ b/src/app/containers/rule-details/rule-details.html
@@ -20,5 +20,95 @@
   SOFTWARE.
 -->
 
+<guh-action-bar back-button="true" on-back="ruleDetails.back()"></guh-action-bar>
 
-<guh-action-bar back-button="true" edit-button="true" on-back="ruleDetails.back()"></guh-action-bar>
+<div class="RuleDetails__wrapper">
+  <div class="RuleDetails__sidebar">
+    <div class="RuleDetails__sidebar-wrapper">
+      <svg class="RuleDetails__icon">
+        <use xlink:href="./assets/svg/device-class/device-class.symbol.svg#RuleIconRoutine"></use>
+      </svg>
+      <div class="RuleDetails__name">{{ ruleDetails.name }}</div>
+      <div class="RuleDetails__description">{{ ruleDetails.getDescription('&nbsp;&middot;&nbsp;') }}</div>
+
+      <ul class="List RuleDetails__sidebar-navigation">
+        <li ng-class="{ 'active': ruleDetails.showEnterActions, 'disabled': ruleDetails.actions.length === 0 }" ng-click="ruleDetails.show('enterActions')">
+          <svg class="List__icon List__icon_before-text">
+            <use xlink:href="./assets/svg/ui/ui.symbol.svg#log-in"></use>
+          </svg>
+          ON Actions
+        </li>
+        <li ng-class="{ 'active': ruleDetails.showExitActions, 'disabled': ruleDetails.exitActions.length === 0 }" ng-click="ruleDetails.show('exitActions')">
+          <svg class="List__icon List__icon_before-text">
+            <use xlink:href="./assets/svg/ui/ui.symbol.svg#log-out"></use>
+          </svg>
+          OFF Actions
+        </li>
+        <li ng-class="{ 'active': ruleDetails.showTrigger, 'disabled': ruleDetails.events.length === 0 }" ng-click="ruleDetails.show('trigger')">
+          <svg class="List__icon List__icon_before-text">
+            <use xlink:href="./assets/svg/ui/ui.symbol.svg#ios-bolt"></use>
+          </svg>
+          Trigger
+        </li>
+        <li ng-class="{ 'active': ruleDetails.showConditions, 'disabled': ruleDetails.states.length === 0 }" ng-click="ruleDetails.show('conditions')">
+          <svg class="List__icon List__icon_before-text">
+            <use xlink:href="./assets/svg/ui/ui.symbol.svg#ios-loop-strong"></use>
+          </svg>
+          Conditions
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="RuleDetails__content" ng-show="ruleDetails.showEnterActions">
+    <div class="action" ng-repeat="action in ruleDetails.actions track by $index">
+      <div class="Action__action-type">{{ action.actionType.name }}</div>
+      <div class="Action__device-name">{{ action.device.name ? action.device.name : action.device.deviceClass.name }}</div>
+      <div ng-if="action.ruleActionParams.length > 0" ng-repeat="ruleActionParam in action.ruleActionParams track by $index">
+        <svg class="RuleDetails__icon RuleDetails__icon_inline">
+          <use xlink:href="./assets/svg/ui/ui.symbol.svg#arrow-right-c"></use>
+        </svg>
+        <span ng-if="ruleActionParam.value !== undefined">{{ ruleActionParam.name }}:&nbsp;{{ ruleActionParam.value }}{{ ruleActionParam.unit | unit }}</span>
+        <span ng-if="ruleActionParam.eventParamName !== undefined">Value of {{ ruleActionParam.name }} = Value of {{ ruleActionParam.eventParamName }} ({{ ruleActionParam.eventType.name }})</span>
+      </div>
+    </div>
+    <button type="button" ng-click="ruleDetails.executeActions()">Turn on</button>
+  </div>
+
+  <div class="RuleDetails__content" ng-show="ruleDetails.showExitActions">
+    <p ng-if="ruleDetails.exitActions.length === 0">Nothing to turn OFF.</p>
+    <div ng-if="ruleDetails.exitActions.length > 0">
+      <div class="action" ng-repeat="exitAction in ruleDetails.exitActions track by $index">
+        <div class="Action__action-type">{{ exitAction.actionType.name }}</div>
+        <div class="Action__device-name">{{ exitAction.device.name ? exitAction.device.name : exitAction.device.deviceClass.name }}</div>
+        <div ng-if="exitAction.ruleActionParams.length > 0" ng-repeat="ruleActionParam in exitAction.ruleActionParams">
+          <svg class="RuleDetails__icon RuleDetails__icon_inline">
+            <use xlink:href="./assets/svg/ui/ui.symbol.svg#arrow-right-c"></use>
+          </svg>
+          <span ng-if="ruleActionParam.value !== undefined">{{ ruleActionParam.name }}:&nbsp;{{ ruleActionParam.value }}{{ ruleActionParam.unit | unit }}</span>
+          <span ng-if="ruleActionParam.eventParamName !== undefined">Value of {{ ruleActionParam.name }} = Value of {{ ruleActionParam.eventParamName }} ({{ ruleActionParam.eventType.name }})</span>
+        </div>
+      </div>
+    </div>
+    <button type="button" ng-click="ruleDetails.executeExitActions()">Turn off</button>
+  </div>
+
+  <div class="RuleDetails__content" ng-show="ruleDetails.showEvents">
+    <p ng-if="ruleDetails.events.length === 0">No triggers defined.</p>
+    <div ng-if="ruleDetails.events.length > 0">
+      <div class="Event" ng-repeat="event in ruleDetails.events track by $index">
+        <p class="Event__value">{{ event.eventType.name }}</p>
+        <p class="Event__name">{{ event.device.name }}</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="RuleDetails__content" ng-show="ruleDetails.showConditions">
+    <p ng-if="ruleDetails.states.length === 0">No conditions defined.</p>
+    <div class="State" ng-switch="state.stateType.unit" ng-repeat="state in ruleDetails.states track by $index">
+      <p class="State__value" ng-switch-when="UnitUnixTime">{{ state.stateType.name }} {{ state.stateDescriptor.operator | operator }} {{ state.stateDescriptor.value * 1000 | date: 'dd.MM.yyyy' }}, {{ state.stateDescriptor.value * 1000 | date: 'HH:mm' }}</p>
+      <p class="State__value" ng-switch-default>{{ state.stateType.name }} {{ state.stateDescriptor.operator | operator }} {{ state.stateDescriptor.value }} {{ state.stateType.unit | unit }}</p>
+      <p class="State__name">{{ state.device.name }}</p>
+    </div>
+  </div>
+</div>
