--- a/src/app/shared/ui/form/form-field-templates/form-field-select-execute.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-select-execute.html
@@ -23,7 +23,7 @@
 
 <!-- <div>Create template for <strong>select</strong></div> -->
 <label class="label-container">
-  <span>{{ formField.label }}</span>
+  <span class="label">{{ formField.label }}</span>
   <select ng-model="formField.value" ng-options="value for value in formField.paramType.allowedValues" ng-change="formField.setValue()"></select>
   <svg class="icon">
     <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-down"></use>
