--- a/src/app/shared/ui/form/form-field-templates/form-field-select.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-select.html
@@ -25,7 +25,7 @@
 <select ng-model="formField.value" ng-options="value for value in formField.selectOptions"></select> -->
 
 <label class="label-container">
-  <span>{{ formField.label }}</span>
+  <span class="label">{{ formField.label }}</span>
   <select ng-model="formField.value" ng-options="value for value in formField.selectOptions" ng-change="formField.setValue()"></select>
   <svg class="icon">
     <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-down"></use>
