--- a/src/assets/scss/base/_header.scss
+++ b/src/assets/scss/base/_header.scss
@@ -86,7 +86,7 @@
   opacity: 1;
 }
 
-@include media($min-width-l) {
+@include media($min-width-m) {
   .Header {
     @include linear-gradient(to top, rgba($white, 0) 0%, rgba($white, 1) 50%, $fallback: transparent);
     bottom: auto;
