--- a/src/assets/scss/modules/_form.scss
+++ b/src/assets/scss/modules/_form.scss
@@ -23,16 +23,186 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
+input,
+select,
+textarea,
 button {
   background-color: transparent;
   border: 0;
-  cursor: pointer;
-  margin: 0;
+  color: $grey;
+  display: block;
+  font-family: 'Ubuntu';
+  font-weight: 400;
   outline: 0;
-  padding: 0;
   @include appearance(none);
+  @include rem(font-size, 1);
+  @include rem(line-height, 1.5);
+  @include rem(margin-bottom, 3);
+
+  &:disabled {
+    background-color: transparent;
+    border: 1px solid rgba($grey, 0.2);
+    color: rgba($grey, 0.4);
+  }
+
+  &::-moz-focus-inner {
+    border: 0;
+  }
 }
 
-button::-moz-focus-inner {
-  border: 0;
+select,
+textarea,
+button {
+  @include rem(border-radius, 0.2);
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  @include rem(padding, 0.75);
+}
+
+select,
+textarea {
+  border: 1px solid rgba($grey, 0.1);
+
+  &:focus {
+    border-color: rgba($grey, 0.4);
+  }
+}
+
+.js-no-touch {
+  select,
+  textarea {
+    &:hover {
+      border-color: rgba($grey, 0.2);
+    }
+  }
+}
+
+input {
+  border-bottom: 1px solid rgba($grey, 0.1);
+
+  &:focus {
+    border-color: rgba($grey, 0.4);
+  }
+}
+
+.js-no-touch {
+  input {
+    &:hover {
+      border-color: rgba($grey, 0.2);
+    }
+  }
+}
+
+input[type="email"],
+input[type="password"],
+input[type="search"],
+input[type="submit"],
+input[type="text"] {
+  @include appearance(none);
+  border-radius: 0;
+}
+
+textarea {
+  @include rem(height, 6);
+}
+
+button {
+  background-color: rgba($grey, 0.1);
+  cursor: pointer;
+  letter-spacing: 0.1em;
+  margin: 0 auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  white-space: nowrap;
+  @include rem(height, 3);
+  @include rem(margin-bottom, 3);
+  @include rem(margin-top, 1.5);
+  @include rem(padding, 0.75, 1.5);
+  @include transition(background-color 0.4s, border-color 0.4s, color 0.4s);
+}
+
+.js-no-touch {
+  button:hover {
+    background-color: rgba($grey, 0.2);
+  }
+}
+
+.checkbox {
+  border-bottom: 1px solid rgba($grey, 0.2);
+  width: 100%;
+  @include rem(margin, 0, 0, 3);
+
+  label {
+    cursor: pointer;
+    fill: rgba($grey, 0.2);
+    letter-spacing: 0;
+    margin: 0;
+    position: relative;
+    text-align: left;
+    text-transform: none;
+    @include rem(font-size, 1);
+    @include rem(padding, 0.75);
+
+    &:hover .FormField__icon {
+      fill: $grey;
+    }
+
+    &.active .FormField__icon {
+      fill: $turquoise;
+    }
+
+    .FormField__icon {
+      position: absolute;
+        right: 0;
+        top: 0;
+    }
+  }
+
+  input {
+    display: none;
+  }
+}
+
+label,
+.label {
+  display: block;
+  letter-spacing: 0.1em;
+  padding-left: 0.1em;
+  text-align: center;
+  text-transform: uppercase;
+  @include rem(font-size, 0.8);
+  @include rem(margin, 0.75, 1.5);
+}
+
+// .FormField:first-of-type, {
+//   label,
+//   .label {
+//     margin-top: 0;
+//   }
+// }
+
+.label-container {
+  margin: 0;
+  position: relative;
+
+  .icon {
+    fill: $grey;
+    position: absolute;
+    @include rem(bottom, 0.75);
+    @include rem(right, 0.75);
+    @include rem(height, 1.5);
+    @include rem(width, 1.5);
+  }
+}
+
+.FormField__icon {
+  display: block;
+  @include rem(height, 3);
+  @include rem(padding, 0.75);
+  @include rem(width, 3);
 }
