--- a/src/app/containers/intro/intro.html
+++ b/src/app/containers/intro/intro.html
@@ -45,8 +45,10 @@
           <!-- TODO: Replace with ng-messages when replacing this with directive (see controller) -->
           <p ng-show="!intro.valid">The entered host is not valid.</p>
 
-          <button type="button" ng-click="intro.resetHost()">Set to default</button>
-          <button type="submit">Save</button>
+          <div>
+            <button type="button" ng-click="intro.resetHost()">Set to default</button>
+            <button type="submit">Save</button>
+          </div>
         </form>
       </div>
     </div>
