--- a/src/app/components/tile-item/tile-item.scss
+++ b/src/app/components/tile-item/tile-item.scss
@@ -84,6 +84,14 @@
   @include rem(right, 0.25);
   @include rem(top, 0);
   @include transform-style(preserve-3d);
+  @include transition(background-color 0.2s, box-shadow 0.2s, transform 0.1s);
+
+  &:hover {
+    background-color: rgba($grey, 0.08);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.15);
+    // border: 1px solid rgba($grey, 1);
+    @include transform(scale(1.01));
+  }
 }
 
 
