--- a/src/app/components/ui/icon/icon.html
+++ b/src/app/components/ui/icon/icon.html
@@ -21,4 +21,6 @@
 -->
 
 
-<button class="full" type="button" ng-click="modal.open()">{{ modal.label }}</button>
+<svg class="Icon" ng-class="icon.type">
+  <use xlink:href="{{ icon.url }}"></use>
+</svg>
