--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -38,7 +38,23 @@
  *
  */
 
+$black: #222;
 $grey: #676767;
 $green: #7cc09a;
 $turquoise: #57baae;
 $white: #fff;
+
+
+/*
+ * Colors
+ *
+ */
+
+$z-layers: (
+  "action-bar": 1,
+  "header": 1,
+  "modal": (
+    "base": 2,
+    "close": 1
+  )
+)
