Change button style.

--- a/src/app/containers/intro/intro.html
+++ b/src/app/containers/intro/intro.html
@@ -46,7 +46,7 @@
           <p ng-show="!intro.valid">The entered host is not valid.</p>
 
           <div>
-            <button type="button" ng-click="intro.resetHost()">Set to default</button>
+            <button type="Button" ng-click="intro.resetHost()">Set to default</button>
             <button type="submit">Save</button>
           </div>
         </form>
