--- a/src/app/containers/rules/rules.html
+++ b/src/app/containers/rules/rules.html
@@ -21,7 +21,7 @@
 -->
 
 
-<guh-action-bar filter-button="true" add-button="true" on-filter="rules.showFilter()" on-add="rules.addRule()" ng-show="rules.showActionBar"></guh-action-bar>
+<guh-action-bar add-button="true" on-add="rules.addRule()" ng-show="rules.showActionBar"></guh-action-bar>
 
 <guh-tile-list initial-visible-id="{{ rules.currentRule.id }}" on-select-tile="rules.showDetails(tileId)" ng-show="rules.showList">
   <guh-tile-item id="{{ rule.id }}" icon-url="./assets/svg/device-class/device-class.symbol.svg#RuleIconRoutine" title="{{rule.name }}" description="{{ rule.getDescription('&nbsp;&middot;&nbsp;') }}" ng-repeat="rule in rules.rules | orderBy:'name' track by $index"></guh-tile-item>
